[tool.poetry]
name = "src"
version = "0.1.0"
description = "Accidents on the highways are inevitable. However, it should not be an automatic death sentence. We want to mitigate the mortality rates by developing a smart report/response system on the go. HElp is On the Way!"
authors = [
    "Franklyn Ogbonna",
    "Aikomo Fisayo",
    "Abuafeez Abolarinwa",
    "Ayorinde Timilehin Emmanuel",
    "Okoroafor Kene"
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"
djangorestframework = "^3.11.0"
django-cors-headers = "^3.2.1"
django-allauth = "^0.41.0"
django-rest-auth = {extras = ["with_social"], version = "^0.9.5"}
drf_yasg = "^1.17.1"
gunicorn = "^20.0.4"
twilio = "^6.41.0"
django-background-tasks = "^1.2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
pep257 = "^0.7.0"

[tool.poetry.scripts]
app = 'src.app:run'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

